# LEGIONHERCULES

./: README.md  install.sh  pyproject.toml
src/legionhercules/: __init__.py
src/legionhercules/analysis/: __init__.py  code_analyzer.py  codebase_indexer.py  git_workflow.py
src/legionhercules/cli/: __init__.py  interactive.py  main.py
src/legionhercules/codegen/: __init__.py  generator.py  sandbox.py
src/legionhercules/config/: __init__.py  manager.py  settings.py
src/legionhercules/core/: __init__.py  agent.py  agent_loop.py  checkpoint.py  message.py  orchestrator.py  subagent.py  task.py
src/legionhercules/debugging/: recovery.py
src/legionhercules/llm/: __init__.py  anthropic_provider.py  azure_provider.py  base.py  cohere_provider.py  deepseek_provider.py  fireworks_provider.py  google_provider.py  groq_provider.py  message.py  mistral_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  perplexity_provider.py  replicate_provider.py  together_provider.py  venice_provider.py
src/legionhercules/mcp/: __init__.py  client.py  tool_adapter.py
src/legionhercules/memory/: __init__.py  embeddings.py  manager.py  vector_store.py
src/legionhercules/nlp/: translator.py
src/legionhercules/planning/: decomposer.py  executor.py
src/legionhercules/plugins/: manager.py
src/legionhercules/profiling/: analyzer.py
src/legionhercules/research/: __init__.py  engine.py  scraper.py  summarizer.py  verifier.py
src/legionhercules/self_improve/: iteration.py  reflection.py
src/legionhercules/templates/: scaffolder.py
src/legionhercules/tools/: __init__.py  base.py  bash_tool.py  file_tools.py  web_search_tool.py
src/legionhercules/tutorials/: interactive.py
src/legionhercules/utils/: __init__.py  helpers.py  logging.py
src/legionhercules/workflows/: engine.py
tests/: test_agent_loop.py  test_codegen.py  test_integration.py  test_memory.py  test_new_providers.py  test_planning.py  test_research.py  test_sandbox.py
