[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legionhercules"
version = "0.1.0"
description = "LEGIONHERCULES - Autonomous CLI framework with parallel agent execution and local LLM inference"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Death Legion Team Coders Demo X HEXA", email = "legion@hercules.ai"}
]
keywords = ["cli", "ai", "agents", "automation", "ollama", "parallel", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "rich>=13.0.0",
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.5.0",
    "duckduckgo-search>=3.9.0",
    "anyio>=4.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-static-i18n>=1.2.0",
]

[project.scripts]
legionhercules = "legionhercules.cli.main:main"
lh = "legionhercules.cli.main:main"

[project.urls]
Homepage = "https://legionhercules.dev"
Documentation = "https://legionhercules.dev/docs"
Repository = "https://github.com/deathlegion/legionhercules"
Issues = "https://github.com/deathlegion/legionhercules/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/legionhercules"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
